RocketMQ, Transaction, StockInCache